# agent-sandbox

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
crates/agent-sandbox/: Cargo.toml  build.rs
crates/agent-sandbox-js/: .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
crates/agent-sandbox-js/__test__/: basic.spec.ts  exec.spec.ts  fetch.spec.ts  helpers.ts  node.spec.ts  security.spec.ts
crates/agent-sandbox-js/npm/darwin-arm64/: README.md  package.json
crates/agent-sandbox-js/npm/darwin-x64/: README.md  package.json
crates/agent-sandbox-js/npm/linux-arm64-gnu/: README.md  package.json
crates/agent-sandbox-js/npm/linux-x64-gnu/: README.md  package.json
crates/agent-sandbox-js/npm/win32-x64-msvc/: README.md  package.json
crates/agent-sandbox-js/src/: lib.rs
crates/agent-sandbox/src/: config.rs  error.rs  lib.rs
crates/agent-sandbox/src/exec/: mod.rs
crates/agent-sandbox/src/fs/: capability.rs  mod.rs  overlay.rs
crates/agent-sandbox/src/runtime/: mod.rs
crates/agent-sandbox/src/toolbox/: mod.rs
crates/agent-sandbox/tests/: integration.rs  perf.rs  perf_memory.rs
wasm/toolbox/: Cargo.toml  build.sh
wasm/toolbox/src/: fetch.rs  main.rs
wasm/toolbox/src/shell/: ast.rs  builtins.rs  env.rs  exec.rs  expand.rs  lexer.rs  mod.rs  parser.rs  pipeline.rs  redirect.rs  token.rs
wasm/toolbox/src/tools/: awk.rs  base64_tool.rs  basename.rs  cat.rs  column.rs  comm.rs  cp.rs  cut.rs  date.rs  diff.rs  dirname.rs  du.rs  echo.rs  env.rs  expand_tool.rs  expr.rs  file.rs  find.rs  fold.rs  git.rs  grep.rs  gzip.rs  head.rs  hostname.rs  join.rs  jq.rs  ln.rs  ls.rs  md5sum.rs  mkdir.rs  mod.rs  mv.rs  nl.rs  node.rs  od.rs  (+32 more)
(+2 files in other folders)
