[package]
name = "agent-toolbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toolbox"
path = "src/main.rs"

[dependencies]
walkdir = "2.5"
regex = "1.12"
sha2 = "0.10"
base64 = "0.22"
tar = "0.4"
flate2 = "1.1"
similar = "2.7"
serde_json = "1"
sha1_smol = "1"
zip = { version = "2", default-features = false }
